Hopefully more browsers support this

--- a/views/index.erb
+++ b/views/index.erb
@@ -339,7 +339,7 @@ header {
 	</header>
 
 	<div id="title">
-		<a id="source-link" target="_blank" href="<%= @output[0][:permalink] %>">
+		<a id="source-link" target="_blank" rel="noreferrer" href="<%= @output[0][:permalink] %>">
 			<%= @output[0][:title] %>
 		</a>
 	</div>
