--- a/views/index.erb
+++ b/views/index.erb
@@ -691,8 +691,8 @@ video.addEventListener("timeupdate", function(event){
 	if (video.currentTime == 0) {
 		loops++
 	}
-	if (loops > 4 && autoplay) {
-		get()	
+	if ((loops > 4 || loops * video.duration > 25) && autoplay) {
+		get()
 	}
 	container.style.backgroundColor = "black"
 })
